modules/network/main.tf
locals {
  subnets_number            = length(var.subnets) > 0 ? length(var.subnets) : length(var.subnets_range)
  network_project_id        = var.network_project_id != "" ? var.network_project_id : var.project_id
  project_id_list           = concat([var.project_id], [var.network_project_id])
  network_self_link         = var.vpc_name == "" ? one(google_compute_network.vpc_network.*.self_link) : one(data.google_compute_network.vpc_list_ids.*.self_link)
  vpc_name                  = var.vpc_name == "" ? one(google_compute_network.vpc_network.*.name) : var.vpc_name
  deployment_project_number = data.google_project.project.number
}
data "google_project" "project" {}

data "google_compute_network" "vpc_list_ids" {
  count   = var.vpc_name == "" ? 0 : 1
  name    = var.vpc_name
  project = local.network_project_id
}

data "google_compute_subnetwork" "subnets_list_ids" {
  count   = length(var.subnets)
  name    = var.subnets[count.index]
  project = local.network_project_id
  region  = var.region
}

# ====================== vpc ==============================
resource "google_project_service" "project_compute" {
  for_each                   = toset(local.project_id_list)
  project                    = each.value
  service                    = "compute.googleapis.com"
  disable_on_destroy         = false
  disable_dependent_services = false
  depends_on                 = [google_project_service.project_gcp_api]
}

resource "google_project_service" "project_gcp_api" {
  for_each                   = toset(local.project_id_list)
  project                    = each.value
  service                    = "iam.googleapis.com"
  disable_on_destroy         = false
  disable_dependent_services = false
}

resource "google_project_service" "service_cloud_api" {
  for_each                   = toset(local.project_id_list)
  project                    = each.value
  service                    = "cloudresourcemanager.googleapis.com"
  disable_on_destroy         = false
  disable_dependent_services = false
}

resource "google_compute_network" "vpc_network" {
  count                           = var.vpc_name == "" ? 1 : 0
  project                         = local.network_project_id
  name                            = "${var.prefix}-vpc"
  auto_create_subnetworks         = false
  mtu                             = var.mtu_size
  routing_mode                    = "REGIONAL"
  delete_default_routes_on_create = var.subnet_autocreate_as_private
  depends_on                      = [google_project_service.project_compute, google_project_service.project_gcp_api]
}

# ======================= subnet ==========================
resource "google_compute_subnetwork" "subnetwork" {
  count                    = length(var.subnets) == 0 && length(var.subnets_range) > 0 ? local.subnets_number : 0
  project                  = local.network_project_id
  name                     = "${var.prefix}-subnet-${count.index}"
  ip_cidr_range            = var.subnets_range[count.index]
  region                   = var.region
  network                  = local.vpc_name
  private_ip_google_access = true
  depends_on               = [google_compute_network.vpc_network]
}

resource "google_compute_subnetwork" "psc_subnetwork" {
  count                    = var.subnet_autocreate_as_private ? 1 : 0
  project                  = local.network_project_id
  name                     = "${var.prefix}-subnet-vpc-access"
  purpose                  = "PRIVATE_SERVICE_CONNECT"
  ip_cidr_range            = var.psc_subnet_cidr
  region                   = var.region
  network                  = local.vpc_name
  private_ip_google_access = true
  depends_on               = [google_compute_network.vpc_network]
}

# ========================= nat ===============================
resource "google_compute_router" "router" {
  count      = var.create_nat_gateway ? 1 : 0
  project    = local.network_project_id
  name       = "${var.prefix}-nat-router"
  network    = local.vpc_name
  region     = var.region
  depends_on = [google_compute_network.vpc_network]
}

## Create Nat Gateway
resource "google_compute_router_nat" "nat" {
  count                              = var.create_nat_gateway ? 1 : 0
  name                               = "${var.prefix}-router-nat"
  project                            = local.network_project_id
  router                             = google_compute_router.router[0].name
  region                             = var.region
  nat_ip_allocate_option             = "AUTO_ONLY"
  source_subnetwork_ip_ranges_to_nat = "ALL_SUBNETWORKS_ALL_IP_RANGES"

  log_config {
    enable = true
    filter = "ERRORS_ONLY"
  }
  depends_on = [google_compute_router.router]
}

# ========================= sg =================================
resource "google_compute_firewall" "sg_ssh" {
  count         = length(var.allow_ssh_cidrs) == 0 ? 0 : 1
  project       = local.network_project_id
  name          = "${var.prefix}-sg-ssh"
  network       = local.vpc_name
  source_ranges = var.allow_ssh_cidrs
  allow {
    protocol = "tcp"
    ports    = ["22"]
  }
  source_tags = ["ssh"]
}

resource "google_compute_firewall" "sg_weka_api" {
  count         = length(var.allow_weka_api_cidrs) == 0 ? 0 : 1
  project       = local.network_project_id
  name          = "${var.prefix}-sg-weka-api"
  network       = local.vpc_name
  source_ranges = var.allow_weka_api_cidrs
  allow {
    protocol = "tcp"
    ports    = ["14000"]
  }
  source_tags = ["weka-api"]
  target_tags = ["backends"]
}

resource "google_compute_firewall" "sg_custom_ingress_rules" {
  count         = length(var.sg_custom_ingress_rules)
  project       = local.network_project_id
  name          = "${var.prefix}-sg-custom-${count.index}"
  network       = local.vpc_name
  source_ranges = var.sg_custom_ingress_rules[count.index]["cidr_blocks"]
  allow {
    protocol = var.sg_custom_ingress_rules[count.index]["protocol"]
    ports    = [var.sg_custom_ingress_rules[count.index]["to_port"]]
  }
  source_tags = ["custom-ingress-rules"]
  target_tags = ["backends"]
}

resource "google_compute_firewall" "sg_private" {
  count         = local.subnets_number > 0 ? 1 : 0
  name          = "${var.prefix}-sg-all"
  project       = local.network_project_id
  network       = local.vpc_name
  source_ranges = length(var.subnets) == 0 ? var.subnets_range : data.google_compute_subnetwork.subnets_list_ids.*.ip_cidr_range
  allow {
    protocol = "all"
  }
  target_tags = ["backends"]
}

#================ Vpc connector ==========================
resource "google_project_service" "project_vpc" {
  for_each                   = toset(local.project_id_list)
  project                    = each.value
  service                    = "vpcaccess.googleapis.com"
  disable_on_destroy         = false
  disable_dependent_services = false
  depends_on                 = [google_project_service.project_gcp_api]
}

resource "google_compute_subnetwork" "connector_subnet" {
  count                    = var.vpc_connector_id == "" && var.vpc_connector_range != "" ? 1 : 0
  name                     = "${var.prefix}-subnet-connector"
  project                  = local.network_project_id
  ip_cidr_range            = var.vpc_connector_range
  region                   = lookup(var.vpc_connector_region_map, var.region, var.region)
  private_ip_google_access = true
  network                  = local.vpc_name
  depends_on               = [google_compute_network.vpc_network]
}

resource "google_project_iam_member" "cloudservices_network_user" {
  count      = var.network_project_id != "" ? 1 : 0
  role       = "roles/compute.networkUser"
  project    = local.network_project_id
  member     = "serviceAccount:${local.deployment_project_number}@cloudservices.gserviceaccount.com"
  depends_on = [google_project_service.project_vpc]
}

resource "google_project_iam_member" "vpcaccess_network_user" {
  count      = var.network_project_id != "" ? 1 : 0
  role       = "roles/compute.networkUser"
  project    = local.network_project_id
  member     = "serviceAccount:service-${local.deployment_project_number}@gcp-sa-vpcaccess.iam.gserviceaccount.com"
  depends_on = [google_project_service.project_vpc]
}

resource "google_vpc_access_connector" "connector" {
  count          = var.vpc_connector_id == "" && var.vpc_connector_range != "" ? 1 : 0
  provider       = google-beta
  project        = var.project_id
  name           = "${var.prefix}-connector"
  region         = lookup(var.vpc_connector_region_map, var.region, var.region)
  machine_type   = "e2-micro"
  min_throughput = 200
  max_throughput = 300
  subnet {
    name       = google_compute_subnetwork.connector_subnet[0].name
    project_id = local.network_project_id
  }
  lifecycle {
    ignore_changes = [network]
  }
  depends_on = [google_project_iam_member.cloudservices_network_user, google_project_iam_member.vpcaccess_network_user]
}

#============== Health check ============================
resource "google_compute_firewall" "fw_hc" {
  count     = var.vpc_name != "" ? 0 : 1
  name      = "${var.prefix}-fw-allow-hc"
  direction = "INGRESS"
  project   = local.network_project_id
  network   = local.vpc_name
  allow {
    protocol = "tcp"
  }
  # allow all access from GCP internal health check ranges
  source_ranges = ["130.211.0.0/22", "35.191.0.0/16", "35.235.240.0/20"]
  source_tags   = ["allow-health-check"]
}

resource "google_compute_firewall" "fw_cloud_run" {
  count     = var.vpc_name != "" ? 0 : 1
  name      = "${var.prefix}-fw-allow-cloud-run"
  project   = local.network_project_id
  direction = "INGRESS"
  network   = local.vpc_name
  allow {
    protocol = "all"
  }
  # allow all access from GCP internal cloud run ranges
  source_ranges = ["35.235.240.0/20"]
  target_tags   = ["all-apis", "vpc-connector", "backends"]
}

resource "google_compute_firewall" "fw_serverless_to_vpc_connector" {
  count     = var.vpc_name == "" && var.network_project_id != "" ? 1 : 0
  name      = "${var.prefix}-fw-allow-serverless-to-vpc-connector"
  project   = local.network_project_id
  direction = "INGRESS"
  network   = local.vpc_name
  allow {
    protocol = "tcp"
    ports    = ["667"]
  }
  allow {
    protocol = "udp"
    ports    = ["665-666"]
  }
  allow {
    protocol = "icmp"
  }
  # allow all access from GCP internal vpc connector ranges
  source_ranges = ["35.199.224.0/19"]
  target_tags   = ["vpc-connector"]
}

resource "google_compute_firewall" "fw_vpc_connector_to_serverless" {
  count              = var.vpc_name == "" && var.network_project_id != "" ? 1 : 0
  name               = "${var.prefix}-fw-allow-vpc-connector-to-serverless"
  project            = local.network_project_id
  direction          = "EGRESS"
  network            = local.vpc_name
  destination_ranges = ["35.199.224.0/19"]
  allow {
    protocol = "tcp"
    ports    = ["667"]
  }
  allow {
    protocol = "udp"
    ports    = ["665-666"]
  }
  allow {
    protocol = "icmp"
  }
  # allow all access from GCP internal vpc connector ranges
  target_tags = ["vpc-connector"]
}

resource "google_compute_firewall" "fw_vpc_connector_health_checks" {
  count     = var.vpc_name == "" && var.network_project_id != "" ? 1 : 0
  name      = "${var.prefix}-fw-allow-vpc-connector-health-checks"
  project   = local.network_project_id
  direction = "INGRESS"
  network   = local.vpc_name
  allow {
    protocol = "tcp"
    ports    = ["667"]
  }

  # allow all access from GCP internal vpc connector ranges
  source_ranges = ["35.191.0.0/16", "130.211.0.0/22"]
  target_tags   = ["vpc-connector"]
}

resource "google_compute_firewall" "fw_vpc_connector_requests" {
  count     = var.vpc_name == "" ? 1 : 0
  name      = "${var.prefix}-fw-allow-vpc-connector-requests"
  project   = local.network_project_id
  direction = "INGRESS"
  network   = local.vpc_name
  allow {
    protocol = "tcp"
  }
  allow {
    protocol = "udp"
  }
  allow {
    protocol = "icmp"
  }
  source_tags = ["vpc-connector"]
}

# allow communication within the subnet
resource "google_compute_firewall" "fw_ilb_to_backends" {
  count         = length(var.subnets_range) > 0 || length(var.subnets) > 0 ? 1 : 0
  name          = "${var.prefix}-fw-allow-ilb-to-backends"
  project       = local.network_project_id
  direction     = "INGRESS"
  network       = local.vpc_name
  source_ranges = length(var.subnets) == 0 ? [var.subnets_range[0]] : [data.google_compute_subnetwork.subnets_list_ids[0].ip_cidr_range]
  allow {
    protocol = "tcp"
  }
  allow {
    protocol = "udp"
  }
  allow {
    protocol = "icmp"
  }
}

# =================== private DNS ==========================
resource "google_project_service" "project_dns" {
  project                    = var.project_id
  service                    = "dns.googleapis.com"
  disable_on_destroy         = false
  disable_dependent_services = false
}

resource "google_dns_managed_zone" "private_zone" {
  count       = var.private_zone_name == "" ? 1 : 0
  name        = "${var.prefix}-private-zone"
  dns_name    = "${var.prefix}.private.net."
  project     = var.project_id
  description = "private dns weka.private.net"
  visibility  = "private"

  private_visibility_config {
    networks {
      network_url = local.network_self_link
    }
  }
  labels = merge(var.labels_map, {
    goog-partner-solution = "isol_plb32_0014m00001h34hnqai_by7vmugtismizv6y46toim6jigajtrwh"
  })
  depends_on = [google_project_service.project_dns]
}

# private private service connect
resource "google_project_service" "psc" {
  count                      = var.subnet_autocreate_as_private ? 1 : 0
  project                    = local.network_project_id
  service                    = "servicenetworking.googleapis.com"
  disable_dependent_services = false
  disable_on_destroy         = false
}

resource "google_compute_route" "restricted_googleapis_route" {
  count            = var.subnet_autocreate_as_private ? 1 : 0
  project          = local.network_project_id
  name             = "${var.prefix}-restricted-googleapis-route"
  dest_range       = "199.36.153.4/30"
  network          = local.vpc_name
  next_hop_gateway = "projects/${local.network_project_id}/global/gateways/default-internet-gateway"
  priority         = 1000
}

resource "google_compute_route" "private_googleapis_route" {
  count            = var.subnet_autocreate_as_private ? 1 : 0
  project          = local.network_project_id
  name             = "${var.prefix}-private-googleapis-route"
  dest_range       = "199.36.153.8/30"
  network          = local.vpc_name
  next_hop_gateway = "projects/${local.network_project_id}/global/gateways/default-internet-gateway"
  priority         = 1000
}

resource "google_compute_global_address" "vpcsc_ip" {
  count        = var.subnet_autocreate_as_private ? 1 : 0
  project      = local.network_project_id
  name         = "${var.prefix}-vpcsc-ip"
  address_type = "INTERNAL"
  purpose      = "PRIVATE_SERVICE_CONNECT"
  network      = local.network_self_link
  address      = var.endpoint_vpcsc_internal_ip_address
  depends_on   = [google_compute_network.vpc_network]
}

resource "google_compute_global_address" "apis_ip" {
  count        = var.subnet_autocreate_as_private ? 1 : 0
  project      = local.network_project_id
  name         = "${var.prefix}-apis-ip"
  address_type = "INTERNAL"
  purpose      = "PRIVATE_SERVICE_CONNECT"
  network      = local.network_self_link
  address      = var.endpoint_apis_internal_ip_address
  depends_on   = [google_compute_network.vpc_network]
}

resource "google_compute_global_forwarding_rule" "apis_forwarding_rule" {
  count                 = var.subnet_autocreate_as_private ? 1 : 0
  project               = var.project_id
  name                  = "${var.prefix}apis"
  target                = "all-apis"
  network               = local.network_self_link
  ip_address            = google_compute_global_address.apis_ip[0].id
  load_balancing_scheme = ""
  labels = merge(var.labels_map, {
    goog-partner-solution = "isol_plb32_0014m00001h34hnqai_by7vmugtismizv6y46toim6jigajtrwh"
  })
  depends_on = [google_compute_global_address.apis_ip]
}

resource "google_compute_global_forwarding_rule" "vpcsc_forwarding_rule" {
  count                 = var.subnet_autocreate_as_private ? 1 : 0
  project               = var.project_id
  name                  = "${var.prefix}vpcsc"
  target                = "vpc-sc"
  network               = local.network_self_link
  ip_address            = google_compute_global_address.vpcsc_ip[0].id
  load_balancing_scheme = ""
  labels = merge(var.labels_map, {
    goog-partner-solution = "isol_plb32_0014m00001h34hnqai_by7vmugtismizv6y46toim6jigajtrwh"
  })
  depends_on = [google_compute_global_address.vpcsc_ip]
}

resource "google_compute_firewall" "allow_endpoint_sg" {
  count         = var.subnet_autocreate_as_private ? 1 : 0
  project       = local.network_project_id
  name          = "${var.prefix}-allow-endpoint-sg"
  direction     = "INGRESS"
  network       = local.network_self_link
  source_ranges = [var.endpoint_apis_internal_ip_address, var.endpoint_vpcsc_internal_ip_address]
  allow {
    protocol = "all"
  }
  source_tags = ["all-apis", "backends"]
  depends_on  = [google_compute_network.vpc_network]
}

resource "google_dns_managed_zone" "cloud_run_zone" {
  count       = var.subnet_autocreate_as_private && var.cloud_run_dns_zone_name == "" ? 1 : 0
  name        = "${var.prefix}-psc"
  dns_name    = "run.app."
  project     = var.project_id
  description = "Private DNS of run.app."
  visibility  = "private"

  private_visibility_config {
    networks {
      network_url = local.network_self_link
    }
  }
  labels = merge(var.labels_map, {
    goog-partner-solution = "isol_plb32_0014m00001h34hnqai_by7vmugtismizv6y46toim6jigajtrwh"
  })
  depends_on = [google_project_service.project_dns, google_compute_network.vpc_network]
}

resource "google_dns_record_set" "cloud_run_endpoint_record" {
  count        = var.subnet_autocreate_as_private ? 1 : 0
  name         = "*.run.app."
  managed_zone = var.cloud_run_dns_zone_name == "" ? google_dns_managed_zone.cloud_run_zone[0].name : var.cloud_run_dns_zone_name
  project      = var.project_id
  type         = "A"
  ttl          = 300
  rrdatas      = [google_compute_global_address.vpcsc_ip[0].address]
  depends_on   = [google_dns_managed_zone.cloud_run_zone, google_compute_global_address.vpcsc_ip, google_compute_network.vpc_network]
}

resource "google_dns_managed_zone" "googleapis_zone" {
  count       = var.subnet_autocreate_as_private && var.googleapis_dns_zone_name == "" ? 1 : 0
  name        = "${var.prefix}-apis"
  dns_name    = "googleapis.com."
  project     = var.project_id
  description = "Private DNS of googleapis.com."
  visibility  = "private"

  private_visibility_config {
    networks {
      network_url = local.network_self_link
    }
  }
  labels = merge(var.labels_map, {
    goog-partner-solution = "isol_plb32_0014m00001h34hnqai_by7vmugtismizv6y46toim6jigajtrwh"
  })
  depends_on = [google_project_service.project_dns, google_compute_network.vpc_network]
}

resource "google_dns_record_set" "apis_endpoint_record" {
  count        = var.subnet_autocreate_as_private ? 1 : 0
  name         = "*.googleapis.com."
  managed_zone = var.googleapis_dns_zone_name == "" ? google_dns_managed_zone.googleapis_zone[0].name : var.googleapis_dns_zone_name
  project      = var.project_id
  type         = "A"
  ttl          = 300
  rrdatas      = [google_compute_global_address.apis_ip[0].address]
  depends_on   = [google_dns_managed_zone.googleapis_zone, google_compute_global_address.apis_ip, google_compute_network.vpc_network]
}


##### Private zone for pkg.dev #####
resource "google_dns_managed_zone" "artifact_registry" {
  count       = var.subnet_autocreate_as_private && var.pkg_dev_dns_zone_name == "" ? 1 : 0
  name        = "${var.prefix}-registry"
  dns_name    = "pkg.dev."
  description = "Allow connect to artifact registry"
  visibility  = "private"

  private_visibility_config {
    networks {
      network_url = local.network_self_link
    }
  }
}

resource "google_dns_record_set" "artifact_cname_record" {
  count        = var.subnet_autocreate_as_private ? 1 : 0
  name         = "*.pkg.dev."
  type         = "CNAME"
  ttl          = 300
  managed_zone = var.pkg_dev_dns_zone_name == "" ? google_dns_managed_zone.artifact_registry[0].name : var.pkg_dev_dns_zone_name
  rrdatas      = ["pkg.dev."]
}

resource "google_dns_record_set" "artifact_a_record" {
  count        = var.subnet_autocreate_as_private ? 1 : 0
  name         = "pkg.dev."
  type         = "A"
  ttl          = 300
  managed_zone = var.pkg_dev_dns_zone_name == "" ? google_dns_managed_zone.artifact_registry[0].name : var.pkg_dev_dns_zone_name
  rrdatas      = ["199.36.153.4", "199.36.153.5", "199.36.153.6", "199.36.153.7"]
}
